<resources>
    <string name="app_name">Renters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Utwórz konto</string>
    <string name="email">Email</string>
    <string name="name">Nazwa</string>
    <string name="password">Hasło</string>
    <string name="or">──────── lub ────────</string>
    <string name="register">Zarejestruj się</string>
    <string name="account_set">Masz już konto? Zaloguj się!</string>

    <!-- Strings related to registration -->
    <string name="invalid_email">Proszę wprowadź poprawny adres email</string>
    <string name="empty_password">Proszę wprowadź hasło</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Hasło nie spełnia wymogów bezpieczeństwa.</string>
    <string name="invalid_confirm_password">Hasła nie są takie same!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="nie_masz_jeszcze_konta_zarejestruj_si">Nie masz jeszcze konta? Zarejestruj się!</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="join_home_button">Dołącz do istniejącego domu</string>
    <string name="create_home_button">Utwórz nowy dom</string>
    <string name="home_name">Nazwa domu</string>
    <string name="home_address">Adres (opcjonalnie)</string>
    <string name="cancel">Anuluj</string>
    <string name="create">Utwórz</string>
    <string name="Add_home_photo">Dodaj zdjęcie domu</string>
    <string name="enter_access_code">Podaj 4 cyfrowy kod dostępu</string>
    <string name="confirm">Zatwierdź</string>
</resources>