<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@color/cardview_shadow_start_color"
            app:cornerRadius="50dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onImageClick"
            android:contentDescription="@string/Add_home_photo"
            android:src="@drawable/ic_add_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"

            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/home_name"
            app:errorIconDrawable="@drawable/ic_warning">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="30"
                android:ems="10"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"

            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/home_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/homeAddresEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:ems="10" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>