<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">


    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/enter_access_code"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/firstDigitTextInputLayout"
                android:layout_width="@dimen/access_code_width"
                android:layout_height="@dimen/access_code_height"
                android:layout_marginEnd="@dimen/access_code_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstDigitEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secondDigitTextInputLayout"
                android:layout_width="@dimen/access_code_width"
                android:layout_height="@dimen/access_code_height"
                android:layout_marginEnd="@dimen/access_code_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/secondDigitEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/thirdDigitTextInputLayout"
                android:layout_width="@dimen/access_code_width"
                android:layout_height="@dimen/access_code_height"
                android:layout_marginEnd="@dimen/access_code_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/thirdDigitEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fourthDigitTextInputLayout"
                android:layout_width="@dimen/access_code_width"
                android:layout_height="@dimen/access_code_height"
                android:layout_marginEnd="@dimen/access_code_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fourthDigitEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:hint="@string/cancel"
                android:layout_marginEnd="30dp"/>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>